updates general challenges in mining social media text

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -27,12 +27,109 @@
   pages = {2154--2165}
 }
 
+@ARTICLE{alejandro2011use,
+  author = {Alejandro, Mosquera and Paloma, Moreda},
+  title = {The use of metrics for measuring informality levels in web 2.0 texts},
+  year = {2011},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@BOOK{baeza1999modern,
+  title = {Modern information retrieval},
+  publisher = {ACM press New York},
+  year = {1999},
+  author = {Baeza-Yates, Ricardo and Ribeiro-Neto, Berthier and others},
+  volume = {463},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@ARTICLE{barrons2012suleiman,
+  author = {Barrons, Genevieve},
+  title = {'Suleiman: Mubarak decided to step down\# egypt\# jan25 OH MY GOD':
+	Examining the use of social media in the 2011 Egyptian revolution},
+  journal = {Contemporary Arab Affairs},
+  year = {2012},
+  volume = {5},
+  pages = {54--67},
+  number = {1},
+  owner = {cisstudent},
+  publisher = {Taylor \& Francis},
+  timestamp = {2015.04.09}
+}
+
+@ARTICLE{becker2011beyond,
+  author = {Becker, Hila and Naaman, Mor and Gravano, Luis},
+  title = {Beyond Trending Topics: Real-World Event Identification on Twitter.},
+  journal = {ICWSM},
+  year = {2011},
+  volume = {11},
+  pages = {438--441},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@ARTICLE{becker2011selecting,
+  author = {Becker, Hila and Naaman, Mor and Gravano, Luis},
+  title = {Selecting Quality Twitter Content for Events.},
+  journal = {ICWSM},
+  year = {2011},
+  volume = {11},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{benevenuto2010detecting,
+  author = {Benevenuto, Fabricio and Magno, Gabriel and Rodrigues, Tiago and
+	Almeida, Virgilio},
+  title = {Detecting spammers on twitter},
+  booktitle = {Collaboration, electronic messaging, anti-abuse and spam conference
+	(CEAS)},
+  year = {2010},
+  volume = {6},
+  pages = {12}
+}
+
 @ARTICLE{bollen2009modeling,
   author = {Bollen, Johan and Pepe, Alberto and Mao, Huina},
   title = {Modeling public mood and emotion: Twitter sentiment and socio-economic
 	phenomena},
   journal = {arXiv preprint arXiv:0911.1583},
   year = {2009}
+}
+
+@INPROCEEDINGS{bontcheva2013twitie,
+  author = {Bontcheva, Kalina and Derczynski, Leon and Funk, Adam and Greenwood,
+	Mark A and Maynard, Diana and Aswani, Niraj},
+  title = {TwitIE: An Open-Source Information Extraction Pipeline for Microblog
+	Text.},
+  booktitle = {RANLP},
+  year = {2013},
+  pages = {83--90},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{bontcheva2013twitie,
+  author = {Bontcheva, Kalina and Derczynski, Leon and Funk, Adam and Greenwood,
+	Mark A and Maynard, Diana and Aswani, Niraj},
+  title = {TwitIE: An Open-Source Information Extraction Pipeline for Microblog
+	Text.},
+  booktitle = {RANLP},
+  year = {2013},
+  pages = {83--90}
+}
+
+@INPROCEEDINGS{castillo2011information,
+  author = {Castillo, Carlos and Mendoza, Marcelo and Poblete, Barbara},
+  title = {Information credibility on twitter},
+  booktitle = {Proceedings of the 20th international conference on World wide web},
+  year = {2011},
+  pages = {675--684},
+  organization = {ACM},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
 }
 
 @ARTICLE{choudhary2012social,
@@ -47,11 +144,83 @@
   publisher = {ACM}
 }
 
+@INPROCEEDINGS{Damak2013,
+  author = {Damak, Firas and Pinel-Sauvagnat, Karen and Boughanem, Mohand and
+	Cabanac, Guillaume},
+  title = {Effectiveness of State-of-the-art Features for Microblog Search},
+  booktitle = {Proceedings of the 28th Annual ACM Symposium on Applied Computing},
+  year = {2013},
+  pages = {914--919},
+  organization = {ACM},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{derczynski2013microblog,
+  author = {Derczynski, Leon and Maynard, Diana and Aswani, Niraj and Bontcheva,
+	Kalina},
+  title = {Microblog-genre noise and impact on semantic annotation accuracy},
+  booktitle = {Proceedings of the 24th ACM Conference on Hypertext and Social Media},
+  year = {2013},
+  pages = {21--30},
+  organization = {ACM}
+}
+
+@INPROCEEDINGS{diakopoulos2012finding,
+  author = {Diakopoulos, Nicholas and De Choudhury, Munmun and Naaman, Mor},
+  title = {Finding and assessing social media information sources in the context
+	of journalism},
+  booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing
+	Systems},
+  year = {2012},
+  pages = {2451--2460},
+  organization = {ACM},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{Duan2010,
+  author = {Duan, Yajuan and Jiang, Long and Qin, Tao and Zhou, Ming and Shum,
+	Heung-Yeung},
+  title = {An empirical study on learning to rank of tweets},
+  booktitle = {Proceedings of the 23rd International Conference on Computational
+	Linguistics},
+  year = {2010},
+  pages = {295--303},
+  organization = {Association for Computational Linguistics},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@ARTICLE{Erkan2004,
+  author = {Erkan, G{\"u}nes and Radev, Dragomir R},
+  title = {LexRank: graph-based lexical centrality as salience in text summarization},
+  journal = {Journal of Artificial Intelligence Research},
+  year = {2004},
+  pages = {457--479},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
 @TECHREPORT{gao2011harnessing,
   author = {Gao, Huiji and Barbier, Geoffrey and Goolsby, Rebecca and Zeng, Daniel},
   title = {Harnessing the crowdsourcing power of social media for disaster relief},
   institution = {DTIC Document},
   year = {2011}
+}
+
+@ARTICLE{gayo2013nepotistic,
+  author = {Gayo-Avello, Daniel},
+  title = {Nepotistic relationships in twitter and their impact on rank prestige
+	algorithms},
+  journal = {Information Processing \& Management},
+  year = {2013},
+  volume = {49},
+  pages = {1250--1280},
+  number = {6},
+  owner = {cisstudent},
+  publisher = {Elsevier},
+  timestamp = {2015.04.09}
 }
 
 @ARTICLE{ghannam2011social,
@@ -60,6 +229,120 @@
   journal = {Center for International Media Assistance},
   year = {2011},
   volume = {3}
+}
+
+@INPROCEEDINGS{gupta2012credibility,
+  author = {Gupta, Aditi and Kumaraguru, Ponnurangam},
+  title = {Credibility ranking of tweets during high impact events},
+  booktitle = {Proceedings of the 1st Workshop on Privacy and Security in Online
+	Social Media},
+  year = {2012},
+  pages = {2},
+  organization = {ACM},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{gupta2012evaluating,
+  author = {Gupta, Manish and Zhao, Peixiang and Han, Jiawei},
+  title = {Evaluating Event Credibility on Twitter.},
+  booktitle = {SDM},
+  year = {2012},
+  pages = {153--164},
+  organization = {SIAM},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@ARTICLE{hallberg2012adaptation,
+  author = {Hallberg, V and Hjalmarsson, A and Puigcerver, J and Rydberg, C and
+	Stjernberg, J},
+  title = {An adaptation of the PageRank algorithm to Twitter world},
+  year = {2012},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@ARTICLE{hemp2009death,
+  author = {Hemp, Paul},
+  title = {Death by information overload},
+  journal = {Harvard business review},
+  year = {2009},
+  volume = {87},
+  pages = {82--89},
+  number = {9}
+}
+
+@INPROCEEDINGS{huang2011quality,
+  author = {Huang, Minlie and Yang, Yi and Zhu, Xiaoyan},
+  title = {Quality-biased Ranking of Short Texts in Microblogging Services.},
+  booktitle = {IJCNLP},
+  year = {2011},
+  pages = {373--382},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{Imran2013,
+  author = {Imran, Muhammad and Elbassuoni, Shady and Castillo, Carlos and Diaz,
+	Fernando and Meier, Patrick},
+  title = {Practical extraction of disaster-relevant information from social
+	media},
+  booktitle = {Proceedings of the 22nd international conference on World Wide Web
+	companion},
+  year = {2013},
+  pages = {1021--1024},
+  organization = {International World Wide Web Conferences Steering Committee},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{inouye2011comparing,
+  author = {Inouye, David and Kalita, Jugal K},
+  title = {Comparing twitter summarization algorithms for multiple post summaries},
+  booktitle = {Privacy, Security, Risk and Trust (PASSAT) and 2011 IEEE Third Inernational
+	Conference on Social Computing (SocialCom), 2011 IEEE Third International
+	Conference on},
+  year = {2011},
+  pages = {298--306},
+  organization = {IEEE},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@ARTICLE{jarvelin2002cumulated,
+  author = {J{\"a}rvelin, Kalervo and Kek{\"a}l{\"a}inen, Jaana},
+  title = {Cumulated gain-based evaluation of IR techniques},
+  journal = {ACM Transactions on Information Systems (TOIS)},
+  year = {2002},
+  volume = {20},
+  pages = {422--446},
+  number = {4},
+  owner = {cisstudent},
+  publisher = {ACM},
+  timestamp = {2015.04.09}
+}
+
+@INCOLLECTION{laniado2010making,
+  author = {Laniado, David and Mika, Peter},
+  title = {Making sense of twitter},
+  booktitle = {The Semantic Web--ISWC 2010},
+  publisher = {Springer},
+  year = {2010},
+  pages = {470--485},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{lin2010design,
+  author = {Lin, Jimmy and Schatz, Michael},
+  title = {Design patterns for efficient graph algorithms in MapReduce},
+  booktitle = {Proceedings of the Eighth Workshop on Mining and Learning with Graphs},
+  year = {2010},
+  pages = {78--85},
+  organization = {ACM},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
 }
 
 @INBOOK{,
@@ -141,6 +424,19 @@
   timestamp = {2015.04.06}
 }
 
+@INPROCEEDINGS{mccreadie2013relevance,
+  author = {McCreadie, Richard and Macdonald, Craig},
+  title = {Relevance in microblogs: Enhancing tweet retrieval using hyperlinked
+	documents},
+  booktitle = {Proceedings of the 10th conference on open research areas in information
+	retrieval},
+  year = {2013},
+  pages = {189--196},
+  organization = {LE CENTRE DE HAUTES ETUDES INTERNATIONALES D'INFORMATIQUE DOCUMENTAIRE},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
 @ARTICLE{metzgar2009social,
   author = {Metzgar, Emily and Maruggi, Albert},
   title = {Social media and the 2008 US presidential election},
@@ -149,6 +445,53 @@
   volume = {4},
   pages = {141--165},
   number = {1}
+}
+
+@INPROCEEDINGS{mihalcea2004textrank,
+  author = {Mihalcea, Rada and Tarau, Paul},
+  title = {TextRank: Bringing order into texts},
+  year = {2004},
+  organization = {Association for Computational Linguistics},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{nagmoti2010ranking,
+  author = {Nagmoti, Rinkesh and Teredesai, Ankur and De Cock, Martine},
+  title = {Ranking approaches for microblog search},
+  booktitle = {2010 IEEE/WIC/ACM International joint conference on Web Intelligence-Intelligent
+	Agent Technology (WI-IAT)},
+  year = {2010},
+  volume = {1},
+  pages = {153--157},
+  organization = {IEEE Computer Society},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{nichols2012summarizing,
+  author = {Nichols, Jeffrey and Mahmud, Jalal and Drews, Clemens},
+  title = {Summarizing sporting events using twitter},
+  booktitle = {Proceedings of the 2012 ACM international conference on Intelligent
+	User Interfaces},
+  year = {2012},
+  pages = {189--198},
+  organization = {ACM},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@ARTICLE{o2010tweets,
+  author = {O'Connor, Brendan and Balasubramanyan, Ramnath and Routledge, Bryan
+	R and Smith, Noah A},
+  title = {From tweets to polls: Linking text sentiment to public opinion time
+	series.},
+  journal = {ICWSM},
+  year = {2010},
+  volume = {11},
+  pages = {122--129},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
 }
 
 @ARTICLE{oh2011information,
@@ -163,6 +506,120 @@
   publisher = {Springer}
 }
 
+@INPROCEEDINGS{olteanu2014crisislex,
+  author = {Olteanu, Alexandra and Castillo, Carlos and Diaz, Fernando and Vieweg,
+	Sarah},
+  title = {CrisisLex: A lexicon for collecting and filtering microblogged communications
+	in crises},
+  booktitle = {In Proceedings of the 8th International AAAI Conference on Weblogs
+	and Social Media (ICWSM" 14)},
+  year = {2014},
+  number = {EPFL-CONF-203561},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@ARTICLE{page1999pagerank,
+  author = {Page, Lawrence and Brin, Sergey and Motwani, Rajeev and Winograd,
+	Terry},
+  title = {The PageRank citation ranking: Bringing order to the web.},
+  year = {1999},
+  owner = {cisstudent},
+  publisher = {Stanford InfoLab},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{phelan2009using,
+  author = {Phelan, Owen and McCarthy, Kevin and Smyth, Barry},
+  title = {Using twitter to recommend real-time topical news},
+  booktitle = {Proceedings of the third ACM conference on Recommender systems},
+  year = {2009},
+  pages = {385--388},
+  organization = {ACM},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{popescu2011extracting,
+  author = {Popescu, Ana-Maria and Pennacchiotti, Marco and Paranjpe, Deepa},
+  title = {Extracting events and event descriptions from Twitter},
+  booktitle = {Proceedings of the 20th international conference companion on World
+	wide web},
+  year = {2011},
+  pages = {105--106},
+  organization = {ACM},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{prevost1996information,
+  author = {Prevost, Scott},
+  title = {An information structural approach to spoken language generation},
+  booktitle = {Proceedings of the 34th annual meeting on Association for Computational
+	Linguistics},
+  year = {1996},
+  pages = {294--301},
+  organization = {Association for Computational Linguistics}
+}
+
+@INPROCEEDINGS{purohit2013twitris,
+  author = {Purohit, Hemant and Sheth, Amit P},
+  title = {Twitris v3: From Citizen Sensing to Analysis, Coordination and Action.},
+  booktitle = {ICWSM},
+  year = {2013},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{ritter2011named,
+  author = {Ritter, Alan and Clark, Sam and Etzioni, Oren and others},
+  title = {Named entity recognition in tweets: an experimental study},
+  booktitle = {Proceedings of the Conference on Empirical Methods in Natural Language
+	Processing},
+  year = {2011},
+  pages = {1524--1534},
+  organization = {Association for Computational Linguistics},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{ritter2011named,
+  author = {Ritter, Alan and Clark, Sam and Etzioni, Oren and others},
+  title = {Named entity recognition in tweets: an experimental study},
+  booktitle = {Proceedings of the Conference on Empirical Methods in Natural Language
+	Processing},
+  year = {2011},
+  pages = {1524--1534},
+  organization = {Association for Computational Linguistics}
+}
+
+@ARTICLE{rolling1981indexing,
+  author = {Rolling, L},
+  title = {Indexing consistency, quality and efficiency},
+  journal = {Information Processing \& Management},
+  year = {1981},
+  volume = {17},
+  pages = {69--76},
+  number = {2},
+  owner = {cisstudent},
+  publisher = {Elsevier},
+  timestamp = {2015.04.09}
+}
+
+@ARTICLE{sakaki2013tweet,
+  author = {Sakaki, Takeshi and Okazaki, Makoto and Matsuo, Yutaka},
+  title = {Tweet analysis for real-time event detection and earthquake reporting
+	system development},
+  journal = {Knowledge and Data Engineering, IEEE Transactions on},
+  year = {2013},
+  volume = {25},
+  pages = {919--931},
+  number = {4},
+  owner = {cisstudent},
+  publisher = {IEEE},
+  timestamp = {2015.04.09}
+}
+
 @INPROCEEDINGS{sen2012identifying,
   author = {Sen, Fatih and Wigand, Rolf T and Agarwal, Nitin and Mahata, Debanjan
 	and Bisgin, Halil},
@@ -170,6 +627,18 @@
   booktitle = {CASoN},
   year = {2012},
   pages = {105--108}
+}
+
+@INPROCEEDINGS{sharifi2010experiments,
+  author = {Sharifi, Beaux and Hutton, M-A and Kalita, Jugal K},
+  title = {Experiments in microblog summarization},
+  booktitle = {Social Computing (SocialCom), 2010 IEEE Second International Conference
+	on},
+  year = {2010},
+  pages = {49--56},
+  organization = {IEEE},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
 }
 
 @INPROCEEDINGS{singh2010clustering,
@@ -193,7 +662,7 @@
   organization = {IEEE}
 }
 
-@INPROCEEDINGS{tsur2012s,
+@INPROCEEDINGS{,
   author = {Tsur, Oren and Rappoport, Ari},
   title = {What's in a hashtag?: content based prediction of the spread of ideas
 	in microblogging communities},
@@ -204,6 +673,27 @@
   organization = {ACM}
 }
 
+@ARTICLE{tunkelang2009twitter,
+  author = {Tunkelang, D},
+  title = {A twitter analog to pagerank},
+  journal = {The Noisy Channel},
+  year = {2009},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{vosecky2012searching,
+  author = {Vosecky, Jan and Leung, Kenneth Wai-Ting and Ng, Wilfred},
+  title = {Searching for quality microblog posts: Filtering and ranking based
+	on content analysis and implicit links},
+  booktitle = {Database Systems for Advanced Applications},
+  year = {2012},
+  pages = {397--413},
+  organization = {Springer},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
 @ARTICLE{walker2013russia,
   author = {Walker, Shaun},
   title = {Russia to Monitor 'All Communications' at Winter Olympics in Sochi},
@@ -212,7 +702,38 @@
   volume = {6}
 }
 
-@ARTICLE{,
+@INPROCEEDINGS{wei2008query,
+  author = {Wei, Furu and Li, Wenjie and Lu, Qin and He, Yanxiang},
+  title = {Query-sensitive mutual reinforcement chain and its application in
+	query-oriented multi-document summarization},
+  booktitle = {Proceedings of the 31st annual international ACM SIGIR conference
+	on Research and development in information retrieval},
+  year = {2008},
+  pages = {283--290},
+  organization = {ACM},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{weng2010twitterrank,
+  author = {Weng, Jianshu and Lim, Ee-Peng and Jiang, Jing and He, Qi},
+  title = {Twitterrank: finding topic-sensitive influential twitterers},
+  booktitle = {Proceedings of the third ACM international conference on Web search
+	and data mining},
+  year = {2010},
+  pages = {261--270},
+  organization = {ACM},
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
+}
+
+@ARTICLE{yardi2009detecting,
+  author = {Yardi, Sarita and Romero, Daniel and Schoenebeck, Grant and others},
+  title = {Detecting spam in a twitter network},
+  journal = {First Monday},
+  year = {2009},
+  volume = {15},
+  number = {1},
   owner = {cisstudent},
   timestamp = {2015.04.09}
 }
