--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@
 \textsc{\Large Doctoral Thesis}\\[0.5cm] % Thesis type
 
 \HRule \\[0.4cm] % Horizontal line
-{\huge \bfseries A Framework for Collecting, Extracting and Managing Event Identity Information from Short Social Media Text}\\[0.4cm] % Thesis title
+{\huge \bfseries A Framework for Collecting, Extracting and Managing Event Identity Information from Textual Content in Social Media}\\[0.4cm] % Thesis title
 \HRule \\[1.5cm] % Horizontal line
  
 \begin{minipage}{0.4\textwidth}
