Updated the Entire Thesis Organization

--- a/main.tex
+++ b/main.tex
@@ -333,12 +333,12 @@ Lastly, I thank University of Arkansas for providing me with the facilities, fun
 % Uncomment the lines as you write the chapters
 %\input{Chapters/Overview}
 \input{Chapters/Chapter1}
-\input{Chapters/Chapter2} 
-\input{Chapters/Chapter3}
+\input{Chapters/Chapter3} 
+\input{Chapters/Chapter2}
 \input{Chapters/Chapter4} 
 \input{Chapters/Chapter5} 
 \input{Chapters/Chapter6} 
-\input{Chapters/Chapter7} 
+%\input{Chapters/Chapter7} 
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
