latest updates in literature review

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -111,12 +111,40 @@
   timestamp = {2015.04.10}
 }
 
+@INPROCEEDINGS{ahn2006stages,
+  author = {Ahn, David},
+  title = {The stages of event extraction},
+  booktitle = {Proceedings of the Workshop on Annotating and Reasoning about Time
+	and Events},
+  year = {2006},
+  pages = {1--8},
+  organization = {Association for Computational Linguistics}
+}
+
 @ARTICLE{alejandro2011use,
   author = {Alejandro, Mosquera and Paloma, Moreda},
   title = {The use of metrics for measuring informality levels in web 2.0 texts},
   year = {2011},
   owner = {cisstudent},
   timestamp = {2015.04.09}
+}
+
+@BOOK{allan2002topic,
+  title = {Topic detection and tracking: event-based information organization},
+  publisher = {Springer Science \& Business Media},
+  year = {2002},
+  author = {Allan, James},
+  volume = {12}
+}
+
+@INPROCEEDINGS{allan1998line,
+  author = {Allan, James and Papka, Ron and Lavrenko, Victor},
+  title = {On-line new event detection and tracking},
+  booktitle = {Proceedings of the 21st annual international ACM SIGIR conference
+	on Research and development in information retrieval},
+  year = {1998},
+  pages = {37--45},
+  organization = {ACM}
 }
 
 @BOOK{anderson2008long,
@@ -187,6 +215,16 @@
   pages = {12}
 }
 
+@INPROCEEDINGS{benson2011event,
+  author = {Benson, Edward and Haghighi, Aria and Barzilay, Regina},
+  title = {Event discovery in social media feeds},
+  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational
+	Linguistics: Human Language Technologies-Volume 1},
+  year = {2011},
+  pages = {389--398},
+  organization = {Association for Computational Linguistics}
+}
+
 @ARTICLE{bollen2009modeling,
   author = {Bollen, Johan and Pepe, Alberto and Mao, Huina},
   title = {Modeling public mood and emotion: Twitter sentiment and socio-economic
@@ -238,6 +276,16 @@
   organization = {ACM},
   owner = {cisstudent},
   timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{chen2009event,
+  author = {Chen, Ling and Roy, Abhishek},
+  title = {Event detection from flickr data through wavelet-based spatial analysis},
+  booktitle = {Proceedings of the 18th ACM conference on Information and knowledge
+	management},
+  year = {2009},
+  pages = {523--532},
+  organization = {ACM}
 }
 
 @ARTICLE{cheong2011social,
@@ -332,6 +380,15 @@
   pages = {457--479},
   owner = {cisstudent},
   timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{filatova2006automatic,
+  author = {Filatova, Elena and Hatzivassiloglou, Vasileios and McKeown, Kathleen},
+  title = {Automatic creation of domain templates},
+  booktitle = {Proceedings of the COLING/ACL on Main conference poster sessions},
+  year = {2006},
+  pages = {207--214},
+  organization = {Association for Computational Linguistics}
 }
 
 @TECHREPORT{gao2011harnessing,
@@ -430,6 +487,35 @@
   timestamp = {2015.04.10}
 }
 
+@ARTICLE{hatzivassiloglou2003domain,
+  author = {Hatzivassiloglou, Vasileios and Filatova, Elena},
+  title = {Domain-independent detection, extraction, and labeling of atomic
+	events},
+  year = {2003}
+}
+
+@INPROCEEDINGS{hatzivassiloglou2000investigation,
+  author = {Hatzivassiloglou, Vasileios and Gravano, Luis and Maganti, Ankineedu},
+  title = {An investigation of linguistic features and clustering algorithms
+	for topical document clustering},
+  booktitle = {Proceedings of the 23rd annual international ACM SIGIR conference
+	on Research and development in information retrieval},
+  year = {2000},
+  pages = {224--231},
+  organization = {ACM}
+}
+
+@INPROCEEDINGS{hatzivassiloglou2000investigation,
+  author = {Hatzivassiloglou, Vasileios and Gravano, Luis and Maganti, Ankineedu},
+  title = {An investigation of linguistic features and clustering algorithms
+	for topical document clustering},
+  booktitle = {Proceedings of the 23rd annual international ACM SIGIR conference
+	on Research and development in information retrieval},
+  year = {2000},
+  pages = {224--231},
+  organization = {ACM}
+}
+
 @ARTICLE{haveliwala2003topic,
   author = {Haveliwala, T.H.},
   title = {Topic-sensitive pagerank: A context-sensitive ranking algorithm for
@@ -504,6 +590,14 @@
   timestamp = {2015.04.09}
 }
 
+@INPROCEEDINGS{ji2008refining,
+  author = {Ji, Heng and Grishman, Ralph},
+  title = {Refining Event Extraction through Cross-Document Inference.},
+  booktitle = {ACL},
+  year = {2008},
+  pages = {254--262}
+}
+
 @ARTICLE{johnson2004wag,
   author = {Johnson, T.J. and others},
   title = {Wag the blog: How reliance on traditional media and the internet
@@ -544,6 +638,16 @@
   owner = {cisstudent},
   publisher = {ACM},
   timestamp = {2015.04.10}
+}
+
+@INPROCEEDINGS{kumaran2004text,
+  author = {Kumaran, Giridhar and Allan, James},
+  title = {Text classification and named entities for new event detection},
+  booktitle = {Proceedings of the 27th annual international ACM SIGIR conference
+	on Research and development in information retrieval},
+  year = {2004},
+  pages = {297--304},
+  organization = {ACM}
 }
 
 @ARTICLE{langville2004deeper,
@@ -672,6 +776,17 @@
   timestamp = {2015.04.06}
 }
 
+@ARTICLE{makkonen2004simple,
+  author = {Makkonen, Juha and Ahonen-Myka, Helena and Salmenkivi, Marko},
+  title = {Simple semantics in topic detection and tracking},
+  journal = {Information Retrieval},
+  year = {2004},
+  volume = {7},
+  pages = {347--368},
+  number = {3-4},
+  publisher = {Springer}
+}
+
 @INPROCEEDINGS{marcus2011twitinfo,
   author = {Marcus, A. and others},
   title = {Twitinfo: aggregating and visualizing microblogs for event exploration},
@@ -708,7 +823,7 @@
   number = {1}
 }
 
-@INPROCEEDINGS{mihalcea2004textrank,
+@INPROCEEDINGS{Mihalcea2004,
   author = {Mihalcea, R. and others},
   title = {TextRank: Bringing order into texts},
   booktitle = {Proceedings of EMNLP},
@@ -803,6 +918,16 @@
   timestamp = {2015.04.09}
 }
 
+@INPROCEEDINGS{petrovic2010streaming,
+  author = {Petrovi{\'c}, Sa{\v{s}}a and Osborne, Miles and Lavrenko, Victor},
+  title = {Streaming first story detection with application to Twitter},
+  booktitle = {Human Language Technologies: The 2010 Annual Conference of the North
+	American Chapter of the Association for Computational Linguistics},
+  year = {2010},
+  pages = {181--189},
+  organization = {Association for Computational Linguistics}
+}
+
 @INPROCEEDINGS{phelan2009using,
   author = {Phelan, Owen and McCarthy, Kevin and Smyth, Barry},
   title = {Using twitter to recommend real-time topical news},
@@ -814,7 +939,7 @@
   timestamp = {2015.04.09}
 }
 
-@INPROCEEDINGS{popescu2011extracting,
+@INPROCEEDINGS{Popescu2011,
   author = {Popescu, A.M. and others},
   title = {Extracting events and event descriptions from twitter},
   booktitle = {Proceedings of the 20th international conference companion on World
@@ -878,6 +1003,17 @@
 }
 
 @INPROCEEDINGS{rattenbury2007towards,
+  author = {Rattenbury, Tye and Good, Nathaniel and Naaman, Mor},
+  title = {Towards automatic extraction of event and place semantics from flickr
+	tags},
+  booktitle = {Proceedings of the 30th annual international ACM SIGIR conference
+	on Research and development in information retrieval},
+  year = {2007},
+  pages = {103--110},
+  organization = {ACM}
+}
+
+@INPROCEEDINGS{rattenbury2007towards,
   author = {Rattenbury, T. and others},
   title = {Towards automatic extraction of event and place semantics from flickr
 	tags},
@@ -906,7 +1042,7 @@
   timestamp = {2015.04.10}
 }
 
-@INPROCEEDINGS{ritter2011named,
+@INPROCEEDINGS{Ritter2011,
   author = {Ritter, Alan and Clark, Sam and Etzioni, Oren and others},
   title = {Named entity recognition in tweets: an experimental study},
   booktitle = {Proceedings of the Conference on Empirical Methods in Natural Language
@@ -963,6 +1099,27 @@
   timestamp = {2015.04.09}
 }
 
+@INPROCEEDINGS{sakaki2010earthquake,
+  author = {Sakaki, Takeshi and Okazaki, Makoto and Matsuo, Yutaka},
+  title = {Earthquake shakes Twitter users: real-time event detection by social
+	sensors},
+  booktitle = {Proceedings of the 19th international conference on World wide web},
+  year = {2010},
+  pages = {851--860},
+  organization = {ACM}
+}
+
+@INPROCEEDINGS{sankaranarayanan2009twitterstand,
+  author = {Sankaranarayanan, Jagan and Samet, Hanan and Teitler, Benjamin E
+	and Lieberman, Michael D and Sperling, Jon},
+  title = {Twitterstand: news in tweets},
+  booktitle = {Proceedings of the 17th acm sigspatial international conference on
+	advances in geographic information systems},
+  year = {2009},
+  pages = {42--51},
+  organization = {ACM}
+}
+
 @INPROCEEDINGS{sen2012identifying,
   author = {Sen, Fatih and Wigand, Rolf T and Agarwal, Nitin and Mahata, Debanjan
 	and Bisgin, Halil},
@@ -997,7 +1154,7 @@
   timestamp = {2015.04.10}
 }
 
-@INPROCEEDINGS{singh2010mining,
+@INPROCEEDINGS{Singh2010,
   author = {Singh, V.K. and others},
   title = {Mining the Blogosphere from a Socio-political Perspective},
   booktitle = {Computer Information Systems and Industrial Management Applications
@@ -1056,6 +1213,16 @@
   date-modified = {2013-04-15 23:33:52 -0500},
   owner = {cisstudent},
   timestamp = {2015.04.10}
+}
+
+@INPROCEEDINGS{tsagkias2011linking,
+  author = {Tsagkias, Manos and de Rijke, Maarten and Weerkamp, Wouter},
+  title = {Linking online news and social media},
+  booktitle = {Proceedings of the fourth ACM international conference on Web search
+	and data mining},
+  year = {2011},
+  pages = {565--574},
+  organization = {ACM}
 }
 
 @INPROCEEDINGS{,
@@ -1125,6 +1292,15 @@
   timestamp = {2015.04.09}
 }
 
+@ARTICLE{weng2011event,
+  author = {Weng, Jianshu and Lee, Bu-Sung},
+  title = {Event Detection in Twitter.},
+  journal = {ICWSM},
+  year = {2011},
+  volume = {11},
+  pages = {401--408}
+}
+
 @INPROCEEDINGS{weng2010twitterrank,
   author = {Weng, Jianshu and Lim, Ee-Peng and Jiang, Jing and He, Qi},
   title = {Twitterrank: finding topic-sensitive influential twitterers},
@@ -1135,6 +1311,23 @@
   organization = {ACM},
   owner = {cisstudent},
   timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{yang1998study,
+  author = {Yang, Yiming and Pierce, Tom and Carbonell, Jaime},
+  title = {A study of retrospective and on-line event detection},
+  booktitle = {Proceedings of the 21st annual international ACM SIGIR conference
+	on Research and development in information retrieval},
+  year = {1998},
+  pages = {28--36},
+  organization = {ACM}
+}
+
+@INPROCEEDINGS{yardi2010tweeting,
+  author = {Yardi, Sarita and Boyd, Danah},
+  title = {Tweeting from the Town Square: Measuring Geographic Local Networks.},
+  booktitle = {ICWSM},
+  year = {2010}
 }
 
 @ARTICLE{yardi2009detecting,
@@ -1160,6 +1353,16 @@
   date-modified = {2013-04-14 13:43:29 -0500},
   owner = {cisstudent},
   timestamp = {2015.04.10}
+}
+
+@INPROCEEDINGS{zhang2007new,
+  author = {Zhang, Kuo and Zi, Juan and Wu, Li Gang},
+  title = {New event detection based on indexing-tree and named entity},
+  booktitle = {Proceedings of the 30th annual international ACM SIGIR conference
+	on Research and development in information retrieval},
+  year = {2007},
+  pages = {215--222},
+  organization = {ACM}
 }
 
 @ARTICLE{zhao2011comparing,
