--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -4,6 +4,6 @@
 
 \label{AppendixA} % For referencing this appendix elsewhere, use \ref{AppendixA}
 
-\lhead{Appendix A. \emph{Appendix Title Here}} % This is for the header on each page - perhaps a shortened title
+\lhead{Appendix A. \emph{Twitter Data Collection}} % This is for the header on each page - perhaps a shortened title
 
 Write your Appendix content here.
