updated the dissertation overview

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -494,7 +494,7 @@
   year = {2003}
 }
 
-@INPROCEEDINGS{hatzivassiloglou2000investigation,
+@INPROCEEDINGS{Hatzivassiloglou2000,
   author = {Hatzivassiloglou, Vasileios and Gravano, Luis and Maganti, Ankineedu},
   title = {An investigation of linguistic features and clustering algorithms
 	for topical document clustering},
@@ -1002,7 +1002,7 @@
   organization = {Association for Computational Linguistics}
 }
 
-@INPROCEEDINGS{rattenbury2007towards,
+@INPROCEEDINGS{Rattenbury2007,
   author = {Rattenbury, Tye and Good, Nathaniel and Naaman, Mor},
   title = {Towards automatic extraction of event and place semantics from flickr
 	tags},
@@ -1118,6 +1118,15 @@
   year = {2009},
   pages = {42--51},
   organization = {ACM}
+}
+
+@INPROCEEDINGS{sen2012identifying,
+  author = {Sen, Fatih and Wigand, Rolf T and Agarwal, Nitin and Mahata, Debanjan
+	and Bisgin, Halil},
+  title = {Identifying focal patterns in social networks.},
+  booktitle = {CASoN},
+  year = {2012},
+  pages = {105--108}
 }
 
 @INPROCEEDINGS{sen2012identifying,
@@ -1375,6 +1384,24 @@
   owner = {cisstudent},
   publisher = {Springer},
   timestamp = {2015.04.10}
+}
+
+@INPROCEEDINGS{zhou2011entity,
+  author = {Zhou, Yinle and Talburt, John},
+  title = {Entity identity information management (EIIM)},
+  booktitle = {International Conference on Information Quality (ICIQ-11), Adelaide,
+	Australia},
+  year = {2011},
+  pages = {327--341}
+}
+
+@ELECTRONIC{pewresearch,
+  year = {2014},
+  title = {Social Networking Fact Sheet},
+  organization = {Pew Research Center for Internet, Science and Tech},
+  url = {http://www.pewinternet.org/fact-sheets/social-networking-fact-sheet/},
+  owner = {cisstudent},
+  timestamp = {2015.04.16}
 }
 
 @OTHER{difflib,
