added entity resolution section in the related work

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1531,6 +1531,14 @@
   author = {Talburt, John R}
 }
 
+@BOOK{talburt2015entity,
+  title = {Entity Information Life Cycle for Big Data: Master Data Management
+	and Information Integration},
+  publisher = {Morgan Kaufmann},
+  year = {2015},
+  author = {Talburt, John R and Zhou, Yinle}
+}
+
 @ARTICLE{thelwall2011sentiment,
   author = {Thelwall, M. and others},
   title = {Sentiment in Twitter events},
