added identification of events in news text, identification of events in social media and started adding content to identifying high quality informative content from social media

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -216,6 +216,25 @@
   timestamp = {2015.04.09}
 }
 
+@INPROCEEDINGS{becker2011automatic,
+  author = {Becker, Hila and Chen, Feiyang and Iter, Dan and Naaman, Mor and
+	Gravano, Luis},
+  title = {Automatic Identification and Presentation of Twitter Content for
+	Planned Events.},
+  booktitle = {ICWSM},
+  year = {2011}
+}
+
+@INPROCEEDINGS{becker2012identifying,
+  author = {Becker, Hila and Iter, Dan and Naaman, Mor and Gravano, Luis},
+  title = {Identifying content for planned events across social media sites},
+  booktitle = {Proceedings of the fifth ACM international conference on Web search
+	and data mining},
+  year = {2012},
+  pages = {533--542},
+  organization = {ACM}
+}
+
 @ARTICLE{becker2011beyond,
   author = {Becker, Hila and Naaman, Mor and Gravano, Luis},
   title = {Beyond Trending Topics: Real-World Event Identification on Twitter.},
@@ -235,6 +254,16 @@
   volume = {11},
   owner = {cisstudent},
   timestamp = {2015.04.09}
+}
+
+@INPROCEEDINGS{becker2010learning,
+  author = {Becker, Hila and Naaman, Mor and Gravano, Luis},
+  title = {Learning similarity metrics for event identification in social media},
+  booktitle = {Proceedings of the third ACM international conference on Web search
+	and data mining},
+  year = {2010},
+  pages = {291--300},
+  organization = {ACM}
 }
 
 @INPROCEEDINGS{benevenuto2010detecting,
@@ -424,6 +453,17 @@
   date-modified = {2013-04-14 13:41:23 -0500},
   owner = {cisstudent},
   timestamp = {2015.04.10}
+}
+
+@INPROCEEDINGS{chhabra2011phi,
+  author = {Chhabra, Sidharth and Aggarwal, Anupama and Benevenuto, Fabricio
+	and Kumaraguru, Ponnurangam},
+  title = {Phi. sh/\$ oCiaL: the phishing landscape through short URLs},
+  booktitle = {Proceedings of the 8th Annual Collaboration, Electronic messaging,
+	Anti-Abuse and Spam Conference},
+  year = {2011},
+  pages = {92--101},
+  organization = {ACM}
 }
 
 @ARTICLE{choudhary2012social,
@@ -644,6 +684,16 @@
   date-modified = {2013-04-14 13:39:53 -0500},
   owner = {cisstudent},
   timestamp = {2015.04.10}
+}
+
+@INPROCEEDINGS{grier2010spam,
+  author = {Grier, Chris and Thomas, Kurt and Paxson, Vern and Zhang, Michael},
+  title = {@ spam: the underground on 140 characters or less},
+  booktitle = {Proceedings of the 17th ACM conference on Computer and communications
+	security},
+  year = {2010},
+  pages = {27--37},
+  organization = {ACM}
 }
 
 @INPROCEEDINGS{gupta2012credibility,
@@ -1067,6 +1117,15 @@
   timestamp = {2015.04.09}
 }
 
+@INPROCEEDINGS{mendoza2010twitter,
+  author = {Mendoza, Marcelo and Poblete, Barbara and Castillo, Carlos},
+  title = {Twitter Under Crisis: Can we trust what we RT?},
+  booktitle = {Proceedings of the first workshop on social media analytics},
+  year = {2010},
+  pages = {71--79},
+  organization = {ACM}
+}
+
 @ARTICLE{metzgar2009social,
   author = {Metzgar, Emily and Maruggi, Albert},
   title = {Social media and the 2008 US presidential election},
@@ -1297,6 +1356,17 @@
   year = {2009},
   pages = {147--155},
   organization = {Association for Computational Linguistics}
+}
+
+@INPROCEEDINGS{ratkiewicz2011truthy,
+  author = {Ratkiewicz, Jacob and Conover, Michael and Meiss, Mark and Gon{\c{c}}alves,
+	Bruno and Patil, Snehal and Flammini, Alessandro and Menczer, Filippo},
+  title = {Truthy: mapping the spread of astroturf in microblog streams},
+  booktitle = {Proceedings of the 20th international conference companion on World
+	wide web},
+  year = {2011},
+  pages = {249--252},
+  organization = {ACM}
 }
 
 @INPROCEEDINGS{Rattenbury2007,
@@ -1551,6 +1621,17 @@
   owner = {cisstudent},
   publisher = {Wiley Online Library},
   timestamp = {2015.04.10}
+}
+
+@ARTICLE{tonkin2012twitter,
+  author = {Tonkin, Emma and Pfeiffer, Heather D and Tourte, Greg},
+  title = {Twitter, information sharing and the London riots?},
+  journal = {Bulletin of the American Society for Information Science and Technology},
+  year = {2012},
+  volume = {38},
+  pages = {49--57},
+  number = {2},
+  publisher = {Wiley Online Library}
 }
 
 @INPROCEEDINGS{troncy2010linking,
